--- a/build.gradle
+++ b/build.gradle
@@ -30,13 +30,17 @@ dependencies {
 //	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
+	implementation 'org.springdoc:springdoc-openapi-data-rest:1.8.0'
+ 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
+	testImplementation 'org.mockito:mockito-core:5.0.0'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 
 
 }
