--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -10,7 +10,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
@@ -20,8 +20,8 @@ spring:
       mode: embedded
 logging:
   level:
-    root: WARN
-    org.springframework.web: WARN
+    root: INFO
+    org.springframework.web: DEBUG
 
   file:
     name: logs/spring-boot-app.log
