--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,19 +1,16 @@
 spring:
   application:
-    name: task
+    name: task-test
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
   h2:
     console:
-      enabled: true  # Enable H2 web console
+      enabled: false  # Enable H2 web console
   jpa:
     hibernate:
       ddl-auto: none
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+    show-sql: false
   sql:
     init:
       platform: h2
@@ -21,10 +18,9 @@ spring:
 logging:
   level:
     root: INFO
-    org.springframework.web: DEBUG
-
+    org.springframework.web: INFO
   file:
-    name: logs/spring-boot-app.log
+    name: logs/spring-boot-app-test.log
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
     file: "%d{yyyy-MM-dd HH:mm:ss} - [%thread] %-5level %logger{36} - %msg%n"
