--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: task
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:appdb
     username: sa
   h2:
     console:
@@ -11,9 +11,6 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: false
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
   sql:
     init:
       platform: h2
@@ -32,3 +29,9 @@ logging:
     rollingpolicy:
       max-file-size: 10MB
       max-history: 7
+springdoc:
+  api-docs:
+    enabled: true
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
