--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
  	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -40,6 +42,12 @@ dependencies {
 
 }
 
+configurations {
+	testImplementation {
+		exclude group: 'org.springdoc' , module: 'springdoc-openapi-starter-webmvc-ui'
+		exclude group: 'org.springdoc' , module: 'spring-boot-starter-actuator'
+	}
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
